Helm/certificat-ressources.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
