Helm/kratos-selfservice-ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selfservice-ui-namespace-ingress
  namespace: selfservice-ui-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/root-path: /
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  rules:
  - host: "demo.neighbook.tech"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: "kratos-selfservice-ui-kratos-selfservice-ui-node"
            port:
              number: 80
  tls:
    - hosts:
      - demo.neighbook.tech
      secretName: neighbook-api-tls
