Helm/neighbook-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neighbook-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/root-path: /api
spec:
  rules:
  - host: "demo.neighbook.tech"
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: "neighbook-api"
            port:
              number: 3000
