Helm/neighbook-marketplace-api-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: marketplace-namespace
  labels:
    name: marketplace-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-api
  namespace: marketplace-namespace
  labels:
    app: marketplace-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: marketplace-api
      app.kubernetes.io/name: marketplace-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: marketplace-api
        app.kubernetes.io/name: marketplace-api
    spec:
      containers:
      - name: marketplace
        image: folyjohn/marketplace-api:0.0.4
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        command: ["sh", "-c", "uvicorn src.main:app --host 0.0.0.0 --port 8000 --root-path /api/v0/marketpace"]
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace-api
  namespace: marketplace-namespace
  labels:
    app: marketplace-api
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/instance: marketplace-api
    app.kubernetes.io/name: marketplace-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  namespace: marketplace-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "demo.neighbook.tech"
    http:
      paths:
      - pathType: Prefix
        path: /api/v0/marketpalce(/|$)(.*)
        backend:
          service:
            name: "marketplace-api"
            port:
              number: 8000
  tls:
    - hosts:
      - demo.neighbook.tech
      secretName: neighbook-api-tls
