Helm/oathkeeper-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oathkeeper-ingress
  namespace: oathkeeper-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/root-path: /
spec:
  rules:
  - host: "demo.neighbook.tech"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: "oathkeeper-proxy"
            port:
              number: 4455
  tls:
    - hosts:
      - demo.neighbook.tech
      secretName: neighbook-api-tls
