Helm/ridepal-auth-api-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: reidepal-auth-namespace
  labels:
    name: reidepal-auth-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reidepal-auth-api
  namespace: reidepal-auth-namespace
  labels:
    app: reidepal-auth-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: reidepal-auth-api
      app.kubernetes.io/name: reidepal-auth-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: reidepal-auth-api
        app.kubernetes.io/name: reidepal-auth-api
    spec:
      containers:
      - name: reidepal-auth
        image: folyjohn/ridepal-auth-api:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/v0/health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: reidepal-auth-api
  namespace: reidepal-auth-namespace
  labels:
    app: reidepal-auth-api
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/instance: reidepal-auth-api
    app.kubernetes.io/name: reidepal-auth-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reidepal-auth-ingress
  namespace: reidepal-auth-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/root-path: /apis
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: "demo.neighbook.tech"
    http:
      paths:
      - pathType: Prefix
        path: /apis
        backend:
          service:
            name: "reidepal-auth-api"
            port:
              number: 3000
  tls:
    - hosts:
      - demo.neighbook.tech
      secretName: neighbook-api-tls
